# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.820 2009/01/22 20:14:05 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.4.0 beta1 (2009/??/??)
 - (2009/01/08) Fixed bug# 3571 - Output Filter Pre+Post of layout object will
    be use on any block, not on any template file like it was in 2.1-2.2. Moved
    back to old behavior.
 - (2009/01/05) Moved to new auth sync layer. Splited auth and agent
    sync into two module layers. For example:

    [Kernel/Config.pm]

    # agent authentication against http basic auth
    $Self->{'AuthModule'} = 'Kernel::System::Auth::HTTPBasic';

    # agent data sync against ldap
    $Self->{'AuthSyncModule'} = 'Kernel::System::Auth::Sync::LDAP';
    $Self->{'AuthSyncModule::LDAP::Host'} = 'ldap://ldap.example.com/';
    $Self->{'AuthSyncModule::LDAP::BaseDN'} = 'dc=otrs, dc=org';
    $Self->{'AuthSyncModule::LDAP::UID'} = 'uid';
    $Self->{'AuthSyncModule::LDAP::SearchUserDN'} = 'uid=sys, ou=user, dc=otrs, dc=org';
    $Self->{'AuthSyncModule::LDAP::SearchUserPw'} = 'some_pass';
    $Self->{'AuthSyncModule::LDAP::UserSyncMap'} = {
        # DB -> LDAP
        UserFirstname => 'givenName',
        UserLastname  => 'sn',
        UserEmail     => 'mail',
    };
    [...]

 - (2008/12/28) Added deamon support to bin/PostMasterMailbox.pl and
    bin/GenericAgent.pl by using "-b <BACKGROUND_INTERVAL_IN_MIN>".
 - (2008/12/22) Improved ticket escalation notification, moved to .dtl support
    (Kernel/Output/HTML/Standard/AgentTicketEscalation.dtl) and added ticket
    title as mouse on over note.
 - (2008/12/19) Added out of office feature for agent users.
 - (2008/12/15) Added new ticket attributes to CSV export of ticket in ticket